--- a/t/etc/cli-driver.yml
+++ b/t/etc/cli-driver.yml
@@ -14,8 +14,8 @@ test2:
   method:
     name: test2_method
     args:
-      required: 
-        hard: 
+      required:
+        hard:
           m: myarg
 
 test3:
@@ -25,8 +25,8 @@ test3:
   method:
     name: test3_method
     args:
-      required: 
-        hard: 
+      required:
+        hard:
           m: myarg
         soft:
           s: softargX
@@ -38,11 +38,11 @@ test4:
   method:
     name: test4_method
     args:
-      required: 
-        hard: 
+      required:
+        hard:
           m: myarg
         soft:
-          s: softargX            
+          s: softargX
       optional:
         o: optionalargZ
 
@@ -53,17 +53,17 @@ test5:
   method:
     name: test5_method
     args:
-      required: 
-        hard: 
+      required:
+        hard:
           m: myarg
         soft:
-          s: softargX            
+          s: softargX
       optional:
-        o: optionalargZ        
+        o: optionalargZ
       flags:
         dry-run: dry_run
-        
-        
+
+
 test6:
   desc: "test class->attr->required->hard"
   class:
@@ -74,12 +74,12 @@ test6:
           h: hard_attr
         soft:
       optional:
-      flags: 
+      flags:
   method:
     name: test6_method
     args:
-      required: 
-        hard: 
+      required:
+        hard:
         soft:
       optional:
       flags:
@@ -95,12 +95,12 @@ test7:
         soft:
           s: soft_attr
       optional:
-      flags: 
+      flags:
   method:
     name: test7_method
     args:
-      required: 
-        hard: 
+      required:
+        hard:
         soft:
       optional:
       flags:
@@ -116,16 +116,16 @@ test8:
         soft:
       optional:
         o: optional_attr
-      flags: 
+      flags:
   method:
     name: test8_method
     args:
-      required: 
-        hard: 
+      required:
+        hard:
         soft:
       optional:
-      flags:   
-      
+      flags:
+
 test9:
   desc: "test class->attr->flags"
   class:
@@ -136,17 +136,17 @@ test9:
           h: hard_attr
         soft:
       optional:
-      flags: 
+      flags:
         dry-run: dry_run
   method:
     name: test9_method
     args:
-      required: 
-        hard: 
+      required:
+        hard:
         soft:
       optional:
-      flags:       
-      
+      flags:
+
 test10:
   desc: test extraneous args
   class:
@@ -154,10 +154,10 @@ test10:
   method:
     name: test2_method
     args:
-      required: 
-        hard: 
-          m: myarg                       
-          
+      required:
+        hard:
+          m: myarg
+
 test11:
   desc: "test cli-driver-v2 with optionals"
   class:
@@ -167,16 +167,16 @@ test11:
         h: reqattr
       optional:
         o: optattr
-      flags: 
+      flags:
   method:
     name: test11_method
     args:
-      required: 
+      required:
         a: reqarg
       optional:
         b: optarg
-      flags:   
-                
+      flags:
+
 test12:
   desc: "test cli-driver-v2 without optionals"
   class:
@@ -186,16 +186,16 @@ test12:
         h: reqattr
       optional:
         o: optattr
-      flags: 
+      flags:
   method:
     name: test12_method
     args:
-      required: 
+      required:
         a: reqarg
       optional:
         b: optarg
       flags:
-      
+
 test13:
   desc: "test multi value array arguments"
   class:
@@ -206,17 +206,17 @@ test13:
             r: '@attributeArrayReq'
       optional:
         o: '@attributeArrayOpt'
-      flags: 
+      flags:
   method:
     name: test13_method1
     args:
       required:
-        hard: 
+        hard:
           a: '@methodArrayReq'
       optional:
         b: '@methodArrayOpt'
       flags:
-      
+
 test14:
   desc: "test help"
   class:
@@ -227,13 +227,13 @@ test14:
             a: '@attrArrayReq'
       optional:
         o: 'attrOptional'
-      flags: 
+      flags:
         attr-flag: attrFlag
   method:
     name: test14_method
     args:
       required:
-        hard: 
+        hard:
           r: 'argRequired'
       optional:
         o: 'argOptional'
@@ -250,5 +250,16 @@ test14:
     examples:
       - "This is an example"
       - "This is the second example"
-          
-          
+
+test15:
+  desc: "test long opts"
+  class:
+    name: CLI::Driver::Test
+  method:
+    name: test15_method
+    args:
+      optional:
+        long-arg: longarg
+
+
+
