--- a/share/templates/cli-driver.yml
+++ b/share/templates/cli-driver.yml
@@ -7,24 +7,25 @@
 ############################################################################
 
 # my-action-name:
-#  is_deprecated: false
+#  deprecated:
+#    status: true
+#    use_instead: yum-list-repo-rcs
 #  class:
 #    name: "My::Class::Name"
 #    attr:
 #      required:
-#        hard:
-#         a: abc
-#        soft:
-#         b: xyz
+#        a: attr_name
+#        b: attr_name
 #      optional:
-#        f: foo
+#        c: attr_name
 #      flags:
-#        dry-run: dry_run_flag
+#        dry-run: dry_run_flag_method
 #  method:
 #    name: my_method_name
 #    args:
 #      required:
-#        hard:
-#        soft:
+#        d: arg_name
 #      optional:                   
+#        e: arg_name
 #      flags:
+#        verbose: verbose_method
